whatsapp footer bug fix as well as hero header para alignment fix

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -205,4 +205,8 @@
   }
 }
 
+.hero-para {
+  width: 90%;
+ 
+}
 }
